[project]
name = "turbulence-correction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.90",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "noise>=1.2.2",
    "ruff>=0.15.0",
    "tensorboard>=2.20.0",
    "types-tqdm>=4.67.2.20260202",
]

[tool.mypy]
ignore_missing_imports = true
